@@ -91,6 +91,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Support SVG rendering with rsvg
 * Cap arbitrary SVG renders to given image size or $wgSVGMaxSize pixels wide
 * (bug 3127) Render large SVGs at image page size correctly
+* Fix regressions in ChangesList traditional layout
 
 
 === Caveats ===
